--- a/RuC.WPF/DocumentForm.xaml
+++ b/RuC.WPF/DocumentForm.xaml
@@ -1,6 +1,6 @@
-﻿<ad:LayoutDocument x:Class="SCide.WPF.DocumentForm" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+﻿<ad:LayoutDocument x:Class="RuC.WPF.DocumentForm" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:ad="http://schemas.xceed.com/wpf/xaml/avalondock" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                   xmlns:my="clr-namespace:SCide.WPF" xmlns:sn="http://scintillanet.codeplex.com" mc:Ignorable="d">
+                   xmlns:my="clr-namespace:RuC.WPF" xmlns:sn="http://scintillanet.codeplex.com" mc:Ignorable="d">
     <Grid>
         <my:SaveFileDialog x:Name="saveFileDialog" Filter="All Files (*.*)|*.*" />
         <sn:ScintillaWPF Name="scintilla" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
