--- a/RuC.WPF/AboutWindow.xaml
+++ b/RuC.WPF/AboutWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SCide.WPF.AboutWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+﻿<Window x:Class="RuC.WPF.AboutWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AboutWindow" Width="441" Height="308"
         Background="#FFD4D0C8">
     <Grid>
@@ -15,7 +15,7 @@
             <ColumnDefinition Width="67*" />
         </Grid.ColumnDefinitions>
         <Image Grid.Row="0" Grid.RowSpan="6" Grid.Column="0"
-               Source="/SCide.WPF;component/Images/Screenshot.png" Stretch="None" />
+               Source="/RuC.WPF;component/Images/Screenshot.png" Stretch="None" />
         <Label Name="productNameLabel" Grid.Row="0" Grid.Column="1"
                VerticalContentAlignment="Center" Content="Product Name" FontWeight="Bold" />
         <Label Name="versionLabel" Grid.Row="1" Grid.Column="1"
