--- a/RuC.WPF/MainWindow.xaml
+++ b/RuC.WPF/MainWindow.xaml
@@ -1,7 +1,9 @@
-﻿<Window x:Class="RuC.WPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+﻿<Controls:MetroWindow x:Class="RuC.WPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="http://schemas.xceed.com/wpf/xaml/avalondock" xmlns:my="clr-namespace:RuC.WPF" xmlns:sc="http://scintillanet.codeplex.com"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="Russian C IDE" Width="860" Height="547"
         WindowStartupLocation="CenterScreen" WindowState="Maximized"
+        ShowTitleBar="False"
         Loaded="Window_Loaded">
     <Window.CommandBindings>
         <CommandBinding Command="{x:Static my:MainWindow.NewFileCommand}" Executed="newMenuItem_Click" />
@@ -266,4 +268,4 @@
             </DockPanel>
         </DockPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
