--- a/RuC.WPF/MainWindow.xaml
+++ b/RuC.WPF/MainWindow.xaml
@@ -1,10 +1,12 @@
 ﻿<Controls:MetroWindow x:Class="RuC.WPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="http://schemas.xceed.com/wpf/xaml/avalondock" xmlns:my="clr-namespace:RuC.WPF" xmlns:sc="http://scintillanet.codeplex.com"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Russian C IDE" Width="860" Height="547"
+        Title="Russian C IDE" Width="800" Height="600"
         WindowStartupLocation="CenterScreen" WindowState="Maximized"
-        ShowTitleBar="False"
         Loaded="Window_Loaded">
+    <Window.Resources>
+        <SolidColorBrush x:Key="menuItemBrush" Color="Black" />
+    </Window.Resources>
     <Window.CommandBindings>
         <CommandBinding Command="{x:Static my:MainWindow.NewFileCommand}" Executed="newMenuItem_Click" />
         <CommandBinding Command="{x:Static my:MainWindow.OpenFileCommand}" Executed="openMenuItem_Click" />
@@ -68,126 +70,130 @@
                     Command="{x:Static my:MainWindow.GotoCommand}"
                     Modifiers="Ctrl" />
     </Window.InputBindings>
-    <Grid>
-        <my:OpenFileDialog x:Name="openFileDialog" Filter="All Files (*.*)|*.*" Multiselect="True" />
-        <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Menu HorizontalAlignment="Stretch" VerticalAlignment="Top" DockPanel.Dock="Top">
-                <MenuItem Header="_File">
-                    <MenuItem Name="newMenuItem" Click="newMenuItem_Click" Header="_New">
+    <Controls:MetroWindow.LeftWindowCommands>
+        <Controls:WindowCommands>
+            <Menu HorizontalAlignment="Stretch" VerticalAlignment="Top" DockPanel.Dock="Top" Background="Transparent">
+                <MenuItem Header="_File" Background="Transparent" Foreground="White">
+                    <MenuItem Name="newMenuItem" Click="newMenuItem_Click" Header="_New" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageFileNew.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Name="openMenuItem" Click="openMenuItem_Click" Header="_Open...">
+                    <MenuItem Name="openMenuItem" Click="openMenuItem_Click" Header="_Open..." Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageFileOpen.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
-                    <MenuItem Name="closeMenuItem" Click="closeWindowMenuItem_Click" Header="_Close" />
+                    <MenuItem Name="closeMenuItem" Click="closeWindowMenuItem_Click" Header="_Close" Foreground="{StaticResource menuItemBrush}" />
                     <Separator />
-                    <MenuItem Name="saveMenuItem" Click="saveMenuItem_Click" Header="_Save">
+                    <MenuItem Name="saveMenuItem" Click="saveMenuItem_Click" Header="_Save" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageFileSave.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Name="saveAsMenuItem" Click="saveAsMenuItem_Click" Header="Save _As..." />
-                    <MenuItem Name="saveAllMenuItem" Click="saveAllMenuItem_Click" Header="Save A_ll">
+                    <MenuItem Name="saveAsMenuItem" Click="saveAsMenuItem_Click" Header="Save _As..." Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="saveAllMenuItem" Click="saveAllMenuItem_Click" Header="Save A_ll" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageFileSaveAll.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
-                    <MenuItem Name="exitMenuItem" Click="exitMenuItem_Click" Header="E_xit" />
+                    <MenuItem Name="exitMenuItem" Click="exitMenuItem_Click" Header="E_xit" Foreground="{StaticResource menuItemBrush}" />
                 </MenuItem>
-                <MenuItem Header="_Edit">
-                    <MenuItem Name="undoMenuItem" Click="undoMenuItem_Click" Header="_Undo">
+                <MenuItem Header="_Edit" Background="Transparent" Foreground="White">
+                    <MenuItem Name="undoMenuItem" Click="undoMenuItem_Click" Header="_Undo" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageEditUndo.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Name="redoMenuItem" Click="redoMenuItem_Click" Header="_Redo">
+                    <MenuItem Name="redoMenuItem" Click="redoMenuItem_Click" Header="_Redo" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageEditRedo.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
-                    <MenuItem Name="cutMenuItem" Click="cutMenuItem_Click" Header="Cu_t">
+                    <MenuItem Name="cutMenuItem" Click="cutMenuItem_Click" Header="Cu_t" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageEditCut.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Name="copyMenuItem" Click="copyMenuItem_Click" Header="_Copy">
+                    <MenuItem Name="copyMenuItem" Click="copyMenuItem_Click" Header="_Copy" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageEditCopy.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Name="pasteMenuItem" Click="pasteMenuItem_Click" Header="_Paste">
+                    <MenuItem Name="pasteMenuItem" Click="pasteMenuItem_Click" Header="_Paste" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
                             <Image Height="16px" Source="/RuC.WPF;component/Images/ImageEditPaste.png" Stretch="Uniform" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
-                    <MenuItem Name="selectLine" Click="selectLineMenuItem_Click" Header="Select _Line" />
-                    <MenuItem Name="selectAllMenuItem" Click="selectAllMenuItem_Click" Header="Select _All" />
-                    <MenuItem Name="clearSelection" Click="clearSelectionMenuItem_Click" Header="Clear Selection" />
+                    <MenuItem Name="selectLine" Click="selectLineMenuItem_Click" Header="Select _Line" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="selectAllMenuItem" Click="selectAllMenuItem_Click" Header="Select _All" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="clearSelection" Click="clearSelectionMenuItem_Click" Header="Clear Selection" Foreground="{StaticResource menuItemBrush}" />
                     <Separator />
-                    <MenuItem Header="_Find and Replace">
+                    <MenuItem Header="_Find and Replace" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem Name="incrementalSearchMenuItem" Click="incrementalSearchMenuItem_Click" Header="_Incremental Search" />
                         <MenuItem Name="findMenuItem" Click="findMenuItem_Click" Header="_Find" />
                         <MenuItem Name="replaceMenuItem" Click="replaceMenuItem_Click" Header="_Replace" />
                         <MenuItem Name="findInFilesMenuItem" Click="findInFilesMenuItem_Click" Header="F_ind in Files" />
                         <MenuItem Name="replaceInFilesMenuItem" Click="replaceInFilesMenuItem_Click" Header="Replace in File_s" />
                     </MenuItem>
-                    <MenuItem Name="gotoMenuItem" Click="gotoMenuItem_Click" Header="_Go To" />
+                    <MenuItem Name="gotoMenuItem" Click="gotoMenuItem_Click" Header="_Go To" Foreground="{StaticResource menuItemBrush}" />
                     <Separator />
-                    <MenuItem Header="Boo_kmarks">
+                    <MenuItem Header="Boo_kmarks" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem Name="toggleBookmarkMenuItem" Click="toggleBookmarkMenuItem_Click" Header="_Toggle Bookmark" />
                         <MenuItem Name="previousBookmarkMenuItem" Click="previousBookmarkMenuItem_Click" Header="_Previous Bookmark" />
                         <MenuItem Name="nextBookmarkMenuItem" Click="nextBookmarkMenuItem_Click" Header="Next _Bookmark" />
                         <MenuItem Name="clearBookmarksMenuItem" Click="clearBookmarksMenuItem_Click" Header="_Clear Bookmarks" />
                     </MenuItem>
                     <Separator />
-                    <MenuItem Header="Ad_vanced">
+                    <MenuItem Header="Ad_vanced" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem Name="makeUpperCaseMenuItem" Click="makeUpperCaseMenuItem_Click" Header="Make _Upper Case" />
                         <MenuItem Name="makeLowerCaseMenuItem" Click="makeLowerCaseMenuItem_Click" Header="Make _Lower Case" />
                     </MenuItem>
                 </MenuItem>
-                <MenuItem Header="_View">
+                <MenuItem Header="_View" Background="Transparent" Foreground="White">
                     <MenuItem Name="toolbarMenuItem" Click="toolbarMenuItem_Click" Header="Tool Bar"
-                              IsCheckable="True" IsChecked="True" />
+                              IsCheckable="True" IsChecked="True" Foreground="{StaticResource menuItemBrush}" />
                     <MenuItem Name="statusBarMenuItem" Click="statusBarMenuItem_Click" Header="Status Bar"
-                              IsCheckable="True" IsChecked="True" />
+                              IsCheckable="True" IsChecked="True" Foreground="{StaticResource menuItemBrush}" />
                     <Separator />
-                    <MenuItem Name="whitespaceMenuItem" Click="whitespaceMenuItem_Click" Header="W_hitespace" />
-                    <MenuItem Name="wordWrapMenuItem" Click="wordWrapMenuItem_Click" Header="_Word Wrap" />
-                    <MenuItem Name="endOfLineMenuItem" Click="endOfLineMenuItem_Click" Header="_End of Line" />
+                    <MenuItem Name="whitespaceMenuItem" Click="whitespaceMenuItem_Click" Header="W_hitespace" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="wordWrapMenuItem" Click="wordWrapMenuItem_Click" Header="_Word Wrap" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="endOfLineMenuItem" Click="endOfLineMenuItem_Click" Header="_End of Line" Foreground="{StaticResource menuItemBrush}" />
                     <Separator />
-                    <MenuItem Name="zoomInMenuItem" Click="zoomInMenuItem_Click" Header="Zoom _In" />
-                    <MenuItem Name="zoomOutMenuItem" Click="zoomOutMenuItem_Click" Header="Zoom _Out" />
-                    <MenuItem Name="resetZoomMenuItem" Click="resetZoomMenuItem_Click" Header="Reset _Zoom" />
+                    <MenuItem Name="zoomInMenuItem" Click="zoomInMenuItem_Click" Header="Zoom _In" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="zoomOutMenuItem" Click="zoomOutMenuItem_Click" Header="Zoom _Out" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="resetZoomMenuItem" Click="resetZoomMenuItem_Click" Header="Reset _Zoom" Foreground="{StaticResource menuItemBrush}" />
                     <Separator />
-                    <MenuItem Name="lineNumbersMenuItem" Click="lineNumbersMenuItem_Click" Header="Line Nu_mbers" />
+                    <MenuItem Name="lineNumbersMenuItem" Click="lineNumbersMenuItem_Click" Header="Line Nu_mbers" Foreground="{StaticResource menuItemBrush}" />
                     <Separator />
-                    <MenuItem Name="foldLevelMenuItem" Click="foldLevelMenuItem_Click" Header="_Fold Level" />
-                    <MenuItem Name="unfoldLevelMenuItem" Click="unfoldLevelMenuItem_Click" Header="_Unfold Level" />
-                    <MenuItem Name="foldAllMenuItem" Click="foldAllMenuItem_Click" Header="Fold _All" />
-                    <MenuItem Name="unfoldAllMenuItem" Click="unfoldAllMenuItem_Click" Header="Unfold A_ll" />
+                    <MenuItem Name="foldLevelMenuItem" Click="foldLevelMenuItem_Click" Header="_Fold Level" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="unfoldLevelMenuItem" Click="unfoldLevelMenuItem_Click" Header="_Unfold Level" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="foldAllMenuItem" Click="foldAllMenuItem_Click" Header="Fold _All" Foreground="{StaticResource menuItemBrush}" />
+                    <MenuItem Name="unfoldAllMenuItem" Click="unfoldAllMenuItem_Click" Header="Unfold A_ll" Foreground="{StaticResource menuItemBrush}" />
                 </MenuItem>
-                <MenuItem Header="_Window">
+                <MenuItem Header="_Window" Background="Transparent" Foreground="White">
                     <MenuItem Name="bookmarkWindowMenuItem" Click="bookmarkWindowMenuItem_Click" Header="_Bookmark Window"
-                              Visibility="Collapsed" />
+                              Visibility="Collapsed" Foreground="{StaticResource menuItemBrush}" />
                     <MenuItem Name="findResultsMenuItem" Click="findResultsMenuItem_Click" Header="_Find Results"
-                              Visibility="Collapsed" />
+                              Visibility="Collapsed" Foreground="{StaticResource menuItemBrush}" />
                     <Separator Visibility="Collapsed" />
-                    <MenuItem Name="closeWindowMenuItem" Click="closeWindowMenuItem_Click" Header="_Close" />
+                    <MenuItem Name="closeWindowMenuItem" Click="closeWindowMenuItem_Click" Header="_Close" Foreground="{StaticResource menuItemBrush}" />
                     <MenuItem Name="closeAllMenuItem" Click="closeAllMenuItem_Click" Header="C_lose All"
-                              Visibility="Collapsed" />
+                              Visibility="Collapsed" Foreground="{StaticResource menuItemBrush}" />
                 </MenuItem>
-                <MenuItem Header="_Help">
-                    <MenuItem Name="aboutMenuItem" Click="aboutMenuItem_Click" Header="_About" />
+                <MenuItem Header="_Help" Background="Transparent" Foreground="White">
+                    <MenuItem Name="aboutMenuItem" Click="aboutMenuItem_Click" Header="_About" Foreground="{StaticResource menuItemBrush}" />
                 </MenuItem>
             </Menu>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.LeftWindowCommands>
+    <Grid>
+        <my:OpenFileDialog x:Name="openFileDialog" Filter="All Files (*.*)|*.*" Multiselect="True" />
+        <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <ToolBarPanel Name="toolStrip" HorizontalAlignment="Stretch" DockPanel.Dock="Top">
                 <ToolBarTray>
                     <ToolBar Height="25px" ToolBarTray.IsLocked="True">
@@ -257,7 +263,7 @@
                 </StatusBar>
                 <ad:DockingManager Name="dockPanel" ActiveContentChanged="dockPanel_ActiveContentChanged">
                     <ad:DockingManager.Theme>
-                        <ad:VS2010Theme />
+                        <ad:Windows10Theme />
                     </ad:DockingManager.Theme>
                     <ad:LayoutRoot>
                         <ad:LayoutPanel>
