Change About Window to Metro

--- a/RuC.WPF/AboutWindow.xaml
+++ b/RuC.WPF/AboutWindow.xaml
@@ -1,6 +1,6 @@
-﻿<Window x:Class="RuC.WPF.AboutWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AboutWindow" Width="441" Height="308"
-        Background="#FFD4D0C8">
+﻿<Controls:MetroWindow x:Class="RuC.WPF.AboutWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        Title="AboutWindow" Width="440" Height="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10*" />
@@ -32,4 +32,4 @@
                 Width="75px" Height="23px" HorizontalAlignment="Right"
                 VerticalAlignment="Center" Content="OK" />
     </Grid>
-</Window>
+</Controls:MetroWindow>
