--- a/RuC.WPF/AboutWindow.xaml
+++ b/RuC.WPF/AboutWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Controls:MetroWindow x:Class="RuC.WPF.AboutWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="AboutWindow" Width="440" Height="300">
+        Title="AboutWindow" Width="440" Height="300"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10*" />
@@ -28,8 +29,5 @@
                  AllowDrop="False" Background="#00000000" Focusable="False"
                  IsReadOnly="True" IsTabStop="False" IsUndoEnabled="False"
                  Text="Description" VerticalScrollBarVisibility="Visible" />
-        <Button Name="okButton" Grid.Row="5" Grid.Column="1"
-                Width="75px" Height="23px" HorizontalAlignment="Right"
-                VerticalAlignment="Center" Content="OK" />
     </Grid>
 </Controls:MetroWindow>
