--- a/RuC.WPF/MainWindow.xaml
+++ b/RuC.WPF/MainWindow.xaml
@@ -72,7 +72,7 @@
     </Window.InputBindings>
     <Controls:MetroWindow.LeftWindowCommands>
         <Controls:WindowCommands>
-            <Menu HorizontalAlignment="Stretch" VerticalAlignment="Top" DockPanel.Dock="Top" Background="Transparent">
+            <Menu HorizontalAlignment="Stretch" VerticalAlignment="Top" Background="Transparent">
                 <MenuItem Header="_File" Background="Transparent" Foreground="White">
                     <MenuItem Name="newMenuItem" Click="newMenuItem_Click" Header="_New" Foreground="{StaticResource menuItemBrush}">
                         <MenuItem.Icon>
@@ -254,7 +254,7 @@
                 </StatusBar>
                 <ad:DockingManager Name="dockPanel" ActiveContentChanged="dockPanel_ActiveContentChanged">
                     <ad:DockingManager.Theme>
-                        <ad:Windows10Theme />
+                        <ad:VS2010Theme />
                     </ad:DockingManager.Theme>
                     <ad:LayoutRoot>
                         <ad:LayoutPanel>
