--- a/RuC.WPF/Resources/lang.ru-RU.xaml
+++ b/RuC.WPF/Resources/lang.ru-RU.xaml
@@ -3,6 +3,8 @@
                     xmlns:v="clr-namespace:System;assembly=mscorlib">
 
     <!-- Main window -->
+    <v:String x:Key="m_main_window">Russian C IDE</v:String>
+
     <v:String x:Key="m_file">_Файл</v:String>
     <v:String x:Key="m_new">Созд_ать</v:String>
     <v:String x:Key="m_open">_Открыть...</v:String>
@@ -56,4 +58,18 @@
     <v:String x:Key="m_close_all">_Закрыть все</v:String>
     <v:String x:Key="m_help">Справ_ка</v:String>
     <v:String x:Key="m_about">_О программе</v:String>
+
+    <v:String x:Key="m_ctrl_n">Создать файл (Ctrl+N)</v:String>
+    <v:String x:Key="m_ctrl_o">Открыть файл (Ctrl+O)</v:String>
+    <v:String x:Key="m_ctrl_s">Сохранить файл (Ctrl+S)</v:String>
+    <v:String x:Key="m_ctrl_shift_s">Сохранить все файлы (Ctrl+Shift+S)</v:String>
+    <v:String x:Key="m_ctrl_x">Вырезать (Ctrl+X)</v:String>
+    <v:String x:Key="m_ctrl_c">Копировать (Ctrl+C)</v:String>
+    <v:String x:Key="m_ctrl_v">Вставить (Ctrl+V)</v:String>
+    <v:String x:Key="m_ctrl_z">Отменить (Ctrl+Z)</v:String>
+    <v:String x:Key="m_ctrl_y">Вернуть (Ctrl+Y)</v:String>
+
+    <!-- Main window -->
+    <v:String x:Key="m_about_window">О программе Russian C IDE</v:String>
+
 </ResourceDictionary>
